--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - run: echo "hello world" > output.txt
       - persist_to_workspace:
-          root: /tmp/workspace
+          root: . 
           paths:
             - output.txt
   print_output_file:
@@ -22,7 +22,7 @@ jobs:
           - image: circleci/node:10.16.3
         steps:
           - attach_workspace:
-              at: /tmp/workspace
+              at: .
           - run: cat output.txt
 
             
