--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,8 +22,8 @@ jobs:
           - image: circleci/node:10.16.3
         steps:
           - attach_workspace:
-              at: ./
-          - run: cat output.txt
+              at: .
+          - run: cat ./output.txt
 
             
      
