--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,9 +14,9 @@ jobs:
     docker:
       - image: circleci/node:10.16.3
     steps:
-      - run: echo "hello world" > ./output.txt
+      - run: echo "hello world" > output.txt
       - persist_to_workspace:
-          root: ./
+          root: .
           paths:
             - output.txt
   print_output_file:
@@ -24,8 +24,8 @@ jobs:
           - image: circleci/node:10.16.3
         steps:
           - attach_workspace:
-              at: ./
-          - run: cat ./output.txt
+              at: .
+          - run: cat output.txt
 
             
      
