--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,14 @@ workflows:
       - print_output_file:
           requires:
               - save_hello_world_output
+      - Use_command
+
+commands:
+  print_pipeline_id:
+    description: "Print pipeline id"
+    steps:
+      - run: echo $CIRCLE_WORKFLOW_ID
+
 
 jobs:
   save_hello_world_output:
@@ -26,6 +34,13 @@ jobs:
           - attach_workspace:
               at: .
           - run: cat output.txt
+  Use_command:
+    docker:
+      - image: circleci/node:10.16.3
+    steps:
+      - print_pipeline_id
+
+
 
             
      
