--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,8 +39,8 @@ jobs:
       - image: circleci/node:10.16.3
     steps:
       - print_pipeline_id
-
-
-
-            
-     
+      - run: return 1
+      - run:
+          name: Catch build failure
+          command: echo "I caught this"
+          when: on_fail
